--- a/text/1-uvod.tex
+++ b/text/1-uvod.tex
@@ -23,7 +23,7 @@ také například pro havarijní plánování při navrhování tras evakuace
 obyvatelstva. V~rámci práce je tvořena offline varianta nástroje
 nezbytná v~případě mimořádných událostí (typu havárie jaderných
 elektráren), kdy nemusí být k~dispozici připojení k~internetu. Nicméně
-v~budoucnu by do nástroje mohl také být implementován vlastní online
+v~budoucnu by do nástroje mohl být také implementován vlastní online
 plánovač tras.
 
 Mimo popisu vývoje nástroje se tato práce bude věnovat teoretickému
@@ -33,7 +33,7 @@ organismus a metodám využívaných mobilními skupinami při pozemním
 monitorování.
 
 Nástroj je vytvářen pro \zk{SÚRO}, jako platforma pro vývoj je použit
-open source geografický informační systém QGIS umožňující implementaci
+open source geo\-grafický informační systém QGIS umožňující implementaci
 nové funkcionality jako tzv. zásuvný modul (plugin). Nástroj je
 vyvíjen v~programovacím jazyku Python s~využitím grafického frameworku
 PyQt a QGIS API (rozhraní pro programování aplikací).
