--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -2,8 +2,8 @@
 \label{2-teorie} Tato kapitola se zabývá základy ionizujícího záření,
 jeho zdroji a biologickými účinky. Dále je popsána činnost mobilních
 skupin provádějících pozemní monitorování radiace. Poslední část
-kapitoly stručně pojednává o~přínosu této bakalářské práce a tvoří
-přechod mezi teoretickou a praktickou částí.
+kapitoly stručně pojednává o~přínosu této bakalářské práce a~tvoří
+přechod mezi teoretickou a~praktickou částí.
 
 \section{Ionizující záření}
 	
@@ -63,7 +63,7 @@ vypočtena z~dávky přenásobené tzv. jakostním činitelem Q závisejícím
 na typu a energii záření. Hodnota Q je doporučovaná mezinárodní komisí
 radiologické ochrany\footnote{V dokumentu ICRP Publication 103
 dostupném na
-http://www.sujb.cz/fileadmin/sujb/docs/radiacni-ochrana/ICRP103\_dokument.pdf}. Například
+\url{http://www.sujb.cz/fileadmin/sujb/docs/radiacni-ochrana/ICRP103\_dokument.pdf}}. Například
 u~gama záření je Q = 1. Ekvivalentní dávka má za jednotku sievert
 [Sv], ekvivalentní dávkový příkon pak sievert za jednotku času [Sv/s].
 	 	
@@ -182,7 +182,7 @@ Nemoc z~ozáření může být rozdělena na 2 kategorie: \cite{nemoc}
 		Akutní nemoc z~ozáření je způsobena jednorázovým
 ozářením. Prvotními příznaky je nevolnost, zvracení a průjmy. Pokud
 dávka ozáření překročí hodnotu přibližně 4 Sv, nastupuje tzv. střevní
-forma, kterou doprovází krvavé průjmy a minerální rozvrat. Poté
+forma, kterou doprovází krvavé průjmy a mine\-rální rozvrat. Poté
 přichází období latence (prodlevy), jehož délka trvání závisí na
 množství absorbované dávky. Po uplynutí latentní fáze nastupuje
 tzv. dřeňová forma, kdy dojde k~zhroucení krvetvorby a imunitních
@@ -202,7 +202,7 @@ bolesti hlavy, dochází k~poruchám motoriky, k~chronickým průjmům,
 váhovým úbytkům atd. Dochází k~poškození centrálního nervového
 systému, což doprovází zhoršený sluch a zrak. Následuje poslední fáze
 nezvratného poškození. Přestávají fungovat rozmnožovací orgány,
-dochází k~poškození srdce, ledvin, jater, dále se na kůži a sliznici
+dochází k~poškození srdce, ledvin, jater, dále se na kůži a~sliznici
 tvoří vředy atd.
 
 \end{itemize}
@@ -236,7 +236,7 @@ limity (zdroj:\cite{suroOcek})}
 tzv. Radiační monitorovací sítě (\zk{RMS}) je zjišťována radiační
 situace na území České republiky. Na činnosti \zk{RMS} se podílejí
 resorty různých ministerstev (financí, obrany, vnitra atd.), dále
-držitelé povolení k~provozu jaderných zařízení a hlavně Státní ústav
+držitelé povolení k~provozu jaderných zařízení a~hlavně Státní ústav
 radiační ochrany (\zk{SÚRO}). Řízením je pověřen Státní ústav pro
 jadernou bezpečnost (\zk{SÚJB}). \cite{suroRMS}
 
@@ -323,6 +323,7 @@ bezpečnosti a ochrany zdraví při práci). Pracovníci používají při
 výjezdech osobní ochranné pomůcky (ochranný oděv, pracovní obuv,
 respirátor atd.) a dále jsou vybaveni osobními dozimetry.
 
+%%% ML: Nepatri tato zasadni kapitola spise do zaveru?
 \section{Přínos bakalářské práce} Během pozemního monitorování dochází
 k~absorbaci škodlivých látek pracovníky \zk{MS}. Legislativou jsou
 stanoveny hodnoty, které množství absorbované dávky nesmí
@@ -335,7 +336,7 @@ práce, má sloužit jako pomůcka k~plánování bezpečných tras
 monitorování. Dle výsledků výpočtu nástroje, tedy mimo jiné
 nakumulovaných dávek v~jednotlivých bodech trasy, může krizový štáb
 upravit trasu, případně modifikovat doporučenou rychlost vozidla tak,
-aby se dlouho nezdržovalo v~simulaci vytipovaných horkých
+aby se dlouho nezdržovalo v~simulaci vytipovaných \uv{horkých}
 místech. Jelikož hodnoty vstupující do výpočtu jsou interpolované a
 nejsou tedy exaktní, nástroj také neposkytuje exaktní výsledky a není
 možné ho použít pro důležitá rozhodování, např. o~evakuaci
