--- a/text/3-technologie.tex
+++ b/text/3-technologie.tex
@@ -3,7 +3,7 @@
 
 V~této kapitole budou popsány technologie použité pro tvorbu
 softwarového nástroje, jež je předmětem této bakalářské
-práce. Implementace byla provedena v~programovacím jazyku Python
+práce. Implementace byla provedena v~programo\-vacím jazyku Python
 s~využitím grafického frameworku PyQt a QGIS API (rozhraní pro
 programování aplikací).
 
@@ -14,12 +14,13 @@ programování aplikací).
       \label{fig:python}
 \end{figure}
   
-Python je objektově orientovaným skriptovacím jazykem zkompilovatelným
+Python je objektově orientovaným skriptovacím jazykem provozovatelným
 téměr na každé platformě. Oceňován programátory (především
-začátečníky) je pro svou jednoduchou a velice schopnou syntax,
+začátečníky) je pro svou jednoduchou a velice efektivní syntax,
 například také díky dynamickému typování (nepožaduje specifikaci
 datového typu u~proměnných). Dále jeho objektový model podporuje
 polymorfismus, přetěžování operátorů a vícenásobnou dědičnost. Hlavním
+%%% ML: tomu nerozumim, jak souvisi "skriptovaci" jazyk s integraci C?
 důvodem, proč je zařazován mezi skriptovací jazyky je jeho integrace
 s~jazykem C. Díky knihovnám Python/C API lze z~programů v~Pythonu
 volat kód psaný v~C nebo naopak, pro aplikace psané v~C je možné
