--- a/text/5-zaver.tex
+++ b/text/5-zaver.tex
@@ -3,7 +3,7 @@
 
 Hlavním cílem této bakalářské práce byla implementace zásuvného modulu
 do QGIS rozšiřujícího softwarové vybavení Státního ústavu pro radiační
-ochranu v.v.i. (i jiných institucí). Nástroj poslouží jako další
+ochranu v.v.i. (i~jiných institucí). Nástroj poslouží jako další
 prostředek k~zrychlení reakční doby při cvičeních radiačních havárií
 příp. při samotných radiačních haváriích a především k~zvýšení
 bezpečnosti mobilních skupin pracujících přímo v~terénu. Dále si práce
@@ -29,6 +29,8 @@ v~angličtině vytvořen návod na jeho používání.
 vytvořen pod licencí \zk{GNU GPL}, kterou podědil po QGIS knihovnách,
 jež byly k~implementaci využity. Zásuvný modul je volně dostupný z~CTU
 GeoForAll Lab QGIS
+%%% ML: tady mate odkaz na online manual
+%%% ML: mluvite o Git anebo QGIS repozitari (zde by mel byt odkaz na git)
 repozitáře\footnote{\texttt{https://ctu-geoforall-lab-projects.github.io/bp-kala-2017/}}. V~budoucnu
 je dále v~plánu začlenění zásuvného modulu do oficiálního QGIS
 repozitáře.
