--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -204,9 +204,9 @@
 		%\noindent
 	\par\hspace{2ex}
 	{Rád bych poděkoval Velkému třesku za vznik vesmíru
-          z~nekonečně husté singularity, díky čemuž vznikl i život a
+          z~nekonečně husté singularity, díky čemuž vznikl i život,
           já a tato práce. Také bych se nedokázal obejít bez své
-          rodiny a blízkých, díky kterým jsem v~posledních měsících
+          rodiny a~blízkých, díky kterým jsem v~posledních měsících
           nemusel trávit večery sám s~myšlenkami o~mém
           počínání. Největší díky bych chtěl věnovat mému vedoucímu
           práce Ing. Martinu Landovi Ph.D. za to, že mě na rozdíl od
