Text update, add user guide.

--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -324,23 +324,4 @@ výjezdech osobní ochranné pomůcky (ochranný oděv, pracovní obuv,
 respirátor atd.) a dále jsou vybaveni osobními dozimetry.
 
 %%% ML: Nepatri tato zasadni kapitola spise do zaveru?
-\section{Přínos bakalářské práce} Během pozemního monitorování dochází
-k~absorbaci škodlivých látek pracovníky \zk{MS}. Legislativou jsou
-stanoveny hodnoty, které množství absorbované dávky nesmí
-překročit. V~závislosti na bezpečnosti práce je tedy třeba plánovat
-trasy monitorování tak, aby pracovníci \zk{MS} nebyli vystaveni zdraví
-ohrožujícím dávkám.
-
-Vytvářený softwarový nástroj, který je předmětem této bakalářské
-práce, má sloužit jako pomůcka k~plánování bezpečných tras
-monitorování. Dle výsledků výpočtu nástroje, tedy mimo jiné
-nakumulovaných dávek v~jednotlivých bodech trasy, může krizový štáb
-upravit trasu, případně modifikovat doporučenou rychlost vozidla tak,
-aby se dlouho nezdržovalo v~simulaci vytipovaných \uv{horkých}
-místech. Jelikož hodnoty vstupující do výpočtu jsou interpolované a
-nejsou tedy exaktní, nástroj také neposkytuje exaktní výsledky a není
-možné ho použít pro důležitá rozhodování, např. o~evakuaci
-obyvatelstva atp. Dalším využitím nástroje může být například
-plánování tras evakuace obyvatel z~vybraných oblastí při havarijním
-plánování nebo cvičení. Nástroj byl vytvořen na objednávku Státního
-ústavu radiační ochrany, v.v.i.
+%%% MK: Přesunul jsem
