--- a/text/3-technologie.tex
+++ b/text/3-technologie.tex
@@ -15,14 +15,14 @@ programování aplikací).
 \end{figure}
   
 Python je objektově orientovaným skriptovacím jazykem provozovatelným
-téměr na každé platformě. Oceňován programátory (především
+téměř na každé platformě. Oceňován programátory (především
 začátečníky) je pro svou jednoduchou a velice efektivní syntax,
 například také díky dynamickému typování (nepožaduje specifikaci
 datového typu u~proměnných). Dále jeho objektový model podporuje
-polymorfismus, přetěžování operátorů a vícenásobnou dědičnost. Hlavním
+polymorfismus, přetěžování operátorů a vícenásobnou dědičnost. 
 %%% ML: tomu nerozumim, jak souvisi "skriptovaci" jazyk s integraci C?
-důvodem, proč je zařazován mezi skriptovací jazyky je jeho integrace
-s~jazykem C. Díky knihovnám Python/C API lze z~programů v~Pythonu
+%%% MK: radši jsem to smazal
+Díky knihovnám Python/C API lze z~programů v~Pythonu
 volat kód psaný v~C nebo naopak, pro aplikace psané v~C je možné
 integrovat interpret Pythonu.  Python bývá označován jako "spustitelný
 pseudokód" - syntaxe se snaží vyhnout složitým zápisům a znakům ($\$,
