--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -241,14 +241,14 @@
 
 
 % Začátek příloh
-%\def\figurename{Figure}%
-%\prilohy
+\def\figurename{Figure}
+\prilohy
 
 % Vysázení seznamu příloh
 %\seznampriloh
 
 % Vložení souboru s přílohami
-%\include{prilohy}
+\include{prilohy}
 
 % Konec dokumentu
 \end{document}
