--- a/text/4-plugin.tex
+++ b/text/4-plugin.tex
@@ -333,16 +333,15 @@ přírůstek) do poleNovéBody}
 \subsection{Výpočet statistik}
 \label{subsec:vypocetStatistik} Získané souřadnice bodů navzorkované
 trasy dále vstupují do procesu výpočtu statistik, hlavního výstupu
-nástroje. Algoritmus výpočtu popisuje následující pseudokód
-\ref{alg:computeStat} (ve třídě
-\texttt{GroundRadiationMonitoringComputation} jako metoda
+nástroje. Algoritmus výpočtu popisuje pseudokód v příloze \textbf{A} 
+(implementace algoritmu je ve třídě \texttt{GroundRadiationMonitoringComputation} jako metoda
 \texttt{getStatistics}). Výpočtu předchází získání hodnot rastru na
 bodech. To je provedeno pomocí QGIS třídy
 \texttt{QgsDataProvider}\footnote{\url{https://qgis.org/api/classQgsDataProvider.html}}
 a jejích metod (v~pseudokódu jako \texttt{získejHodnotu}). Pole se
 souřadnicemi bodů navzorkované trasy je v~pseudokódu označeno jako
 \texttt{poleBody}. Pro výpočet vzdálenosti mezi body je použita stejná
-metoda jako v~pseudokódu \ref{alg:getTrackVertices}. Do výpočtu dále
+metoda jako v~pseudokódu~\ref{alg:getTrackVertices}. Do výpočtu dále
 vstupuje uživatelsky zadaná rychlost pohybu, která je považována za
 konstantní na celé trase. Výstupem algoritmu jsou celkové statistiky
 (viz. sekce \ref{sec:VystupniData}): celková délka a čas projetí
@@ -356,59 +355,7 @@ koeficientem podle zvolených jednotek mapy dávkového příkonu
 uživatelem.
 
 
-\begin{algorithm}
-\caption{Výpočet statistik}
-\label{alg:computeStat}
-	\begin{algorithmic}[1] \STATE{\textbf{funkce}
-vypočtiStatistiky (poleBody)} \STATE{kumulativníČas = 0}
-\STATE{časSegmentPředchozí = 0} \STATE{časMimoRastr = 0}
-\STATE{délkaMimoRastr = 0} \STATE{početBodůRastr = 0}
-\STATE{kumulativníDávka = 0} \STATE{hodnotaRastrPředchozí = 0}
-\STATE{průměrnýPříkon = 0} \STATE{délkaTrasy = 0}
-\STATE{maximálníPříkon = 0}
 
-		\FOR{i = řada od 0 do délka(poleBody)} \IF{i <
-délka(poleBody) - 1} \STATE{vzdálenost =
-vypočtiVzdálenost(poleBody[i], poleBody[i+1])} \ELSE \STATE{vzdálenost
-= 0}
-			\ENDIF
-			
-			\STATE{délkaTrasy = délkaTrasy + vzdálenost}
-
-			\STATE{časSegment = vzdálenost / rychlost}
-\STATE{kumulativníČas = kumulativníČas + časSegmentPředchozí}
-\STATE{dávkaSegment = časSegmentPředchozí $\cdot$
-hodnotaRastrPředchozí} \STATE{kumulativníDávka = kumulativníDávka +
-dávkaSegment} \STATE{hodnotaRastr = získejHodnotu(poleBody[i])}
-
-		\algstore{myalg}
-		\end{algorithmic}
-		\end{algorithm}
-
-		\begin{algorithm}
-		\begin{algorithmic} [1] \algrestore{myalg}
-
-			\IF{bod1 mimo rastr \textbf{or} hodnotaRastr
-<= 0} \STATE{hodnotaRastr = 0} \STATE{časMimoRastr = časMimoRastr +
-časSegment} \STATE{délkaMimoRastr = délkaMimoRastr + vzdálenost} \ELSE
-\STATE{průměrnýPříkon = průměrnýPříkon + hodnotaRastr}
-\STATE{početBodůRastr = početBodůRastr + 1}
-			\ENDIF
-			
-			\IF{hodnotaRastr > maximálníPříkon}
-\STATE{maximálníPříkon = hodnotaRastr}
-			\ENDIF \STATE{přidej [hodnotaRastr,
-kumulativníČas, časSegmentPředchozí, kumulativníDávka] do
-poleAtributů} \STATE{hodnotaRastrPředchozí = hodnotaRastr}
-\STATE{časSegmentPředchozí = časSegment}
-		\ENDFOR
-		
-		\STATE{průměrnýPříkon = průměrnýPříkon /
-početBodůRastr} \STATE{statistiky = [délkaTrasy, kumulativníČas,
-délkaMimoRastr, časMimoRastr, maximálníPříkon, průměrnýPříkon,
-kumulativníDávka]} \STATE{\textbf{return} poleAtributů, statistiky}
-	\end{algorithmic}
-\end{algorithm}
 
 Může se stát, že trasa probíhá mimo mapu dávkových příkonů. Extrakce
 hodnoty rastru v~bodě, který leží mimo něj, vrací hodnotu
@@ -422,7 +369,8 @@ dávkového příkonu na trase nejsou tyto hodnoty započítávané.
 %%% ML: pridal jsem tak, aby testovaci data zacinala az pod
 %%% pseudokodem. Pseudokod je sam o sobe hodne dlouhy, skoro by patril
 %%% do prilohy
-\clearpage
+
+%%% MK: Dal jsem ho do přílohy.
 
 \section{Testovací data} Testování zásuvného modulu při vývoji
 probíhalo s~využitím dat připravených od \zk{SÚRO}.
@@ -444,7 +392,8 @@ SAGA-GIS\footnote{\url{http://www.saga-gis.org}} byla z~dat
 vytvořena interpolovaná mapa dávkových příkonů metodou Multilevel
 B-Spline
 %%% ML: tento odkaz bych uz neuvadel. I tak je poznamek pod caru v textu uz prilis
-Interpolation\footnote{http://www.saga-gis.org/saga\_tool\_doc/2.1.3/grid\_spline\_4.html}.
+%%% MK: smazáno
+Interpolation.
 
 \begin{figure}[H] \centering
     \includegraphics[scale=0.4]{./pictures/interpolovana_mapa.png}
@@ -462,9 +411,9 @@ Mapy.cz a Google (jak již bylo zmíněno v~kapitole
 \zk{KML} a \zk{GPX}. Byly voleny tak, aby se jejich průběh co nejvíce
 přiblížil \zk{JE} Fukushima a aby byla vidět výrazná změna hodnot
 dávkových příkonů.
-
+\newpage
 \begin{figure}[H] \centering
-    \includegraphics[scale=0.2]{./pictures/trasa_monitorovani.png}
+    \includegraphics[scale=0.3]{./pictures/trasa_monitorovani.png}
       	\caption[Trasa monitorování (Futaba-Nawashirogae, prefektura
 Fukushima)]{Trasa monitorování (Futaba-Nawashirogae, prefektura
 Fukushima)}(zdroj: vlastní, data poskytnutá od SÚRO, v.v.i.)
@@ -473,3 +422,9 @@ Fukushima)}(zdroj: vlastní, data poskytnutá od SÚRO, v.v.i.)
 
 %%% ML: Chybi mi tu ukazky vystupu a zminka, ze vlastni navod na
 %%% pouzit modulu je v priloze
+
+%%% MK: Ukázky výstupu mám v podkapitole Výstupní data 
+
+\section{Návod na použití}
+K zásuvnému modulu byl vytvořen návod na použití v anglickém jazyku. 
+Návod je uveden v příloze \textbf{B}. 
