--- a/text/5-zaver.tex
+++ b/text/5-zaver.tex
@@ -11,10 +11,10 @@ kladla za~cíl seznámit čtenáře s~dopady ionizujícího záření na lidský
 organismus a s~metodou pozemního snímání radiace.
 
 Během pozemního monitorování dochází
-k~absorbaci škodlivých látek pracovníky \zk{MS}. Legislativou jsou
+k~absorbaci škodlivých látek pracovníky mobilních skupin. Legislativou jsou
 stanoveny hodnoty, které množství absorbované dávky nesmí
 překročit. V~závislosti na bezpečnosti práce je tedy třeba plánovat
-trasy monitorování tak, aby pracovníci \zk{MS} nebyli vystaveni zdraví
+trasy monitorování tak, aby pracovníci mobilních skupin nebyli vystaveni zdraví
 ohrožujícím dávkám.
 
 Vytvářený softwarový nástroj má sloužit jako pomůcka k~plánování bezpečných tras
@@ -32,7 +32,7 @@ plánování nebo cvičení. Nástroj byl vytvořen na objednávku Státního
 
 Nástroj byl s~pomocí návrhů a~požadavků na~úpravy od~pracovníků
 \zk{SÚRO} vytvořen na~míru tak, aby splnil očekávání a~byl zároveň 
-co~nejvíce intuitivní. Nástroj byl vytvořen v~anglickém jazyce s~vidinou
+co~nejvíce intuitivní. Byl napsán v~anglickém jazyce s~vidinou
 jeho využití i~v~jiných než českých institucích. Zároveň byl
 v~angličtině vytvořen návod na~jeho používání.
 
