--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -264,7 +264,7 @@ The second tab of the plugin is \texttt{Settings} tab:
 \begin{itemize}
 
 \item
-  A shapefile with point layer counting vertices of a sampled route with
+  A shapefile with point layer containing vertices of a sampled route with
   following attributes - dose rate, cumulated time, time interval from
   previous point, cumulated dose.
 \end{itemize}
