--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -219,8 +219,8 @@ radiačních havárií. \cite{suroRadOch} \cite{sujbRadSit}
 \label{sub:limity} Stupeň povoleného ozáření obyvatelstva se řídí
 omezeními, která jsou určována legislativou ve vyhláškách úřadů
 zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně
-pro Českou republiku je to vyhláška 307/2002 Sb. Celosvětově se
-ekvivalentní dávka resp. ekvivalentní dávkový příkon uvádí
+pro Českou republiku je to vyhláška 307/2002 Sb. Na základě doporučení
+pracovníků SÚRO jsou hodnoty dávky resp. dávkového příkonu udávané
 v~jednotkách microsievert [$\mu$Sv] resp. microsievert za hodinu
 [$\mu$Sv/h]. Limity expozice ionizujícímu záření v~ČR jsou patrné
 z~obrázku \ref{fig:davkyCR}. \cite{suroPriRadOch}
@@ -311,8 +311,8 @@ měsíčně, kdy každá \zk{MS} projede trasu dlouhou cca. 40km, naměří
 dávkové příkony a vloží je do databáze. Jednou za čas také probíhají
 cvičení ve větším měřítku (cvičení ZÓNA), kdy jsou simulovány radiační
 havárie. Zapojovány jsou všechny složky, které by byly zapojeny během
-skutečné havárie. Poslední takové cvičení proběhlo v~roce 2015, kdy
-byla simulována havárie v~jaderné elektrárně Temelín.
+skutečné havárie. Poslední takové cvičení proběhlo v~roce 2017, kdy
+byla simulována havárie v~jaderné elektrárně Dukovany.
 
 \subsubsection{Bezpečnost práce}
 
