--- a/text/5-zaver.tex
+++ b/text/5-zaver.tex
@@ -11,7 +11,8 @@ kladla za~cíl seznámit čtenáře s~dopady ionizujícího záření na lidský
 organismus a s~metodou pozemního snímání radiace.
 
 Během pozemního monitorování dochází
-k~absorbaci škodlivých látek pracovníky mobilních skupin. Legislativou jsou
+k~absorbaci energie ionizujícího záření pracovníky mobilních skupin. 
+Legislativou jsou
 stanoveny hodnoty, které množství absorbované dávky nesmí
 překročit. V~závislosti na bezpečnosti práce je tedy třeba plánovat
 trasy monitorování tak, aby pracovníci mobilních skupin nebyli vystaveni zdraví
